# gp2midi

./: .gitignore  README.md  debug_log.txt  debug_midi_file.py  debug_xml_structure.txt  midi_dump.txt  package.json  requirements.txt  start_app.ps1  test_output.mid  vercel.json
backend/: convert_file.py  debug_gp_parser.py  debug_inspect_xml.py  inspect_gp.py  main.py  pyproject.toml  requirements.txt  test_api_flow.py  test_midi_generation.py  test_output.mid  test_output_filtered.mid  test_xml_parser_ns.py
backend/api/: router.py
backend/converter/: channel_manager.py  midi_writer.py
backend/core/converter/: channel_manager.py  midi_writer.py
backend/core/parser/: binary_parser.py  gp_parser.py  xml_parser.py
backend/models/: song_model.py
backend/parser/: binary_parser.py  gp_parser.py  xml_parser.py
backend/tests/: test_bend_logic.py  test_midi_generation.py  test_stream_parsing.py  test_xml_parser_ns.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: DropZone.jsx  Header.jsx  StarBackground.jsx
frontend/src/components/Conversion/: ConversionControls.jsx  DropZone.css  DropZone.jsx  ResultCard.jsx  TrackSelector.css  TrackSelector.jsx
frontend/src/components/Modals/: InfoModal.jsx
frontend/src/hooks/: useConversion.js
frontend/src/styles/: stars.css  variables.css
scripts/: start_app.ps1
